[package]
name = "expect_rs"
version = "0.0.1"
edition = "2021"
license = "MIT"
authors = [
    "ishibashi-futoshi <ishibashi.futos@outlook.com>"
]
description = "This is the jest expect like matcher."
readme = "README.md"
homepage = "https://github.com/ishibashi-futos/expect-rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "example",
]


[dependencies]
regex = "1.5.5"
